# CoralApp

./: .dockerignore  .env  .envexample  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/app/: forms.py  settings.py  urls.py  views.py
app/app/users/: models.py
app/static/css/: modern-business.css
app/static/font-awesome/less/: icons.less_Zone.Identifier
app/templates/: index.html  login.html  services.html  signup.html
coralvenv/: pyvenv.cfg
django/app/: admin.py  forms.py  models.py  settings.py  urls.py  views.py
django/app/migrations/: 0001_initial.py  0002_delete_test.py  0003_rename_full_n_user_username.py
django/templates/: index.html  login.html  signup.html
web/: __init__.py  views.py
web/static/js/: contact_me.js
web/templates/: login.html  signup.html
