[tool.poetry]
name = "corallweb"
version = "0.1.0"
description = ""
authors = ["ilya90906767 <betyaev.ilya2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
sqlalchemy = "^2.0.23"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
